[package]
name = "mcp-rust-e2e-client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rmcp = { path = "../../../../../../rust-sdk/crates/rmcp", features = [
    "client",
    "transport-streamable-http-client",
    "reqwest",
    "tower",
    "auth"
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
url = "2.4"
tower = "0.5"
reqwest = "0.12" 